StagedAnalysis/1.ApplicationEvaluation/1.PrePass/PrePass.java
/* Generated By:JavaCC: Do not edit this line. PrePass.java */
import syntaxtree.*;
import java.util.Vector;


public class PrePass implements PrePassConstants {

  static final public Goal Goal() throws ParseException {
   NodeListOptional n0 = new NodeListOptional();
   CompleteConditionalValues n1;
   NodeToken n2;
   Token n3;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACKET:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      n1 = CompleteConditionalValues();
        n0.addNode(n1);
    }
     n0.nodes.trimToSize();
    n3 = jj_consume_token(0);
      n3.beginColumn++; n3.endColumn++;
      n2 = JTBToolkit.makeNodeToken(n3);
     {if (true) return new Goal(n0,n2);}
    throw new Error("Missing return statement in function");
  }

  static final public CompleteConditionalValues CompleteConditionalValues() throws ParseException {
   ProgramElement n0;
   NodeToken n1;
   Token n2;
   NodeListOptional n3 = new NodeListOptional();
   ConditionalValues n4;
    n0 = ProgramElement();
    n2 = jj_consume_token(24);
              n1 = JTBToolkit.makeNodeToken(n2);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 26:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      n4 = ConditionalValues();
        n3.addNode(n4);
    }
     n3.nodes.trimToSize();
     {if (true) return new CompleteConditionalValues(n0,n1,n3);}
    throw new Error("Missing return statement in function");
  }

  static final public ProgramElement ProgramElement() throws ParseException {
   NodeToken n0;
   Token n1;
   ClassName n2;
   NodeToken n3;
   Token n4;
   MethodName n5;
   NodeToken n6;
   Token n7;
   TypeTag n8;
   NodeToken n9;
   Token n10;
   ParmNumber n11;
   NodeToken n12;
   Token n13;
   FieldList n14;
   NodeToken n15;
   Token n16;
    n1 = jj_consume_token(LBRACKET);
            n0 = JTBToolkit.makeNodeToken(n1);
    n2 = ClassName();
    n4 = jj_consume_token(25);
            n3 = JTBToolkit.makeNodeToken(n4);
    n5 = MethodName();
    n7 = jj_consume_token(COMMA);
            n6 = JTBToolkit.makeNodeToken(n7);
    n8 = TypeTag();
    n10 = jj_consume_token(COMMA);
             n9 = JTBToolkit.makeNodeToken(n10);
    n11 = ParmNumber();
    n13 = jj_consume_token(COMMA);
             n12 = JTBToolkit.makeNodeToken(n13);
    n14 = FieldList();
    n16 = jj_consume_token(RBRACKET);
             n15 = JTBToolkit.makeNodeToken(n16);
     {if (true) return new ProgramElement(n0,n2,n3,n5,n6,n8,n9,n11,n12,n14,n15);}
    throw new Error("Missing return statement in function");
  }

  static final public ConditionalValues ConditionalValues() throws ParseException {
   NodeChoice n0;
   LocalType n1;
   ParameterType n2;
   ReturnType n3;
   ArgumentType n4;
   FieldType n5;
    if (jj_2_1(10)) {
      n1 = LocalType();
        n0 = new NodeChoice(n1, 0);
    } else if (jj_2_2(10)) {
      n2 = ParameterType();
        n0 = new NodeChoice(n2, 1);
    } else if (jj_2_3(10)) {
      n3 = ReturnType();
        n0 = new NodeChoice(n3, 2);
    } else if (jj_2_4(10)) {
      n4 = ArgumentType();
        n0 = new NodeChoice(n4, 3);
    } else if (jj_2_5(10)) {
      n5 = FieldType();
        n0 = new NodeChoice(n5, 4);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return new ConditionalValues(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public LocalType LocalType() throws ParseException {
   NodeToken n0;
   Token n1;
   ClassName n2;
   NodeToken n3;
   Token n4;
   MethodName n5;
   NodeToken n6;
   Token n7;
   TypeTag n8;
   NodeToken n9;
   Token n10;
   ParmNumber n11;
   NodeToken n12;
   Token n13;
   FieldList n14;
   NodeToken n15;
   Token n16;
   DependencyValue n17;
   NodeToken n18;
   Token n19;
   ResolvedValue n20;
   NodeToken n21;
   Token n22;
    n1 = jj_consume_token(26);
             n0 = JTBToolkit.makeNodeToken(n1);
    n2 = ClassName();
    n4 = jj_consume_token(25);
            n3 = JTBToolkit.makeNodeToken(n4);
    n5 = MethodName();
    n7 = jj_consume_token(COMMA);
            n6 = JTBToolkit.makeNodeToken(n7);
    n8 = TypeTag();
    n10 = jj_consume_token(COMMA);
             n9 = JTBToolkit.makeNodeToken(n10);
    n11 = ParmNumber();
    n13 = jj_consume_token(COMMA);
             n12 = JTBToolkit.makeNodeToken(n13);
    n14 = FieldList();
    n16 = jj_consume_token(27);
              n15 = JTBToolkit.makeNodeToken(n16);
    n17 = DependencyValue();
    n19 = jj_consume_token(COMMA);
             n18 = JTBToolkit.makeNodeToken(n19);
    n20 = ResolvedValue();
    n22 = jj_consume_token(28);
              n21 = JTBToolkit.makeNodeToken(n22);
     {if (true) return new LocalType(n0,n2,n3,n5,n6,n8,n9,n11,n12,n14,n15,n17,n18,n20,n21);}
    throw new Error("Missing return statement in function");
  }

  static final public ParameterType ParameterType() throws ParseException {
   NodeToken n0;
   Token n1;
   ClassName n2;
   NodeToken n3;
   Token n4;
   MethodName n5;
   NodeToken n6;
   Token n7;
   TypeTag n8;
   NodeToken n9;
   Token n10;
   ParmNumber n11;
   NodeToken n12;
   Token n13;
   FieldList n14;
   NodeToken n15;
   Token n16;
   DependencyValue n17;
   NodeToken n18;
   Token n19;
   ResolvedValue n20;
   NodeToken n21;
   Token n22;
    n1 = jj_consume_token(26);
             n0 = JTBToolkit.makeNodeToken(n1);
    n2 = ClassName();
    n4 = jj_consume_token(25);
            n3 = JTBToolkit.makeNodeToken(n4);
    n5 = MethodName();
    n7 = jj_consume_token(COMMA);
            n6 = JTBToolkit.makeNodeToken(n7);
    n8 = TypeTag();
    n10 = jj_consume_token(COMMA);
             n9 = JTBToolkit.makeNodeToken(n10);
    n11 = ParmNumber();
    n13 = jj_consume_token(COMMA);
             n12 = JTBToolkit.makeNodeToken(n13);
    n14 = FieldList();
    n16 = jj_consume_token(27);
              n15 = JTBToolkit.makeNodeToken(n16);
    n17 = DependencyValue();
    n19 = jj_consume_token(COMMA);
             n18 = JTBToolkit.makeNodeToken(n19);
    n20 = ResolvedValue();
    n22 = jj_consume_token(28);
              n21 = JTBToolkit.makeNodeToken(n22);
     {if (true) return new ParameterType(n0,n2,n3,n5,n6,n8,n9,n11,n12,n14,n15,n17,n18,n20,n21);}
    throw new Error("Missing return statement in function");
  }

  static final public ReturnType ReturnType() throws ParseException {
   NodeToken n0;
   Token n1;
   ClassName n2;
   NodeToken n3;
   Token n4;
   MethodName n5;
   NodeToken n6;
   Token n7;
   TypeTag n8;
   NodeToken n9;
   Token n10;
   ParmNumber n11;
   NodeToken n12;
   Token n13;
   FieldList n14;
   NodeToken n15;
   Token n16;
   DependencyValue n17;
   NodeToken n18;
   Token n19;
   ResolvedValue n20;
   NodeToken n21;
   Token n22;
    n1 = jj_consume_token(26);
             n0 = JTBToolkit.makeNodeToken(n1);
    n2 = ClassName();
    n4 = jj_consume_token(25);
            n3 = JTBToolkit.makeNodeToken(n4);
    n5 = MethodName();
    n7 = jj_consume_token(COMMA);
            n6 = JTBToolkit.makeNodeToken(n7);
    n8 = TypeTag();
    n10 = jj_consume_token(COMMA);
             n9 = JTBToolkit.makeNodeToken(n10);
    n11 = ParmNumber();
    n13 = jj_consume_token(COMMA);
             n12 = JTBToolkit.makeNodeToken(n13);
    n14 = FieldList();
    n16 = jj_consume_token(27);
              n15 = JTBToolkit.makeNodeToken(n16);
    n17 = DependencyValue();
    n19 = jj_consume_token(COMMA);
             n18 = JTBToolkit.makeNodeToken(n19);
    n20 = ResolvedValue();
    n22 = jj_consume_token(28);
              n21 = JTBToolkit.makeNodeToken(n22);
     {if (true) return new ReturnType(n0,n2,n3,n5,n6,n8,n9,n11,n12,n14,n15,n17,n18,n20,n21);}
    throw new Error("Missing return statement in function");
  }

  static final public ArgumentType ArgumentType() throws ParseException {
   NodeToken n0;
   Token n1;
   ClassName n2;
   NodeToken n3;
   Token n4;
   MethodName n5;
   NodeToken n6;
   Token n7;
   TypeTag n8;
   NodeToken n9;
   Token n10;
   ArgNumber n11;
   NodeToken n12;
   Token n13;
   FieldList n14;
   NodeToken n15;
   Token n16;
   DependencyValue n17;
   NodeToken n18;
   Token n19;
   ResolvedValue n20;
   NodeToken n21;
   Token n22;
    n1 = jj_consume_token(26);
             n0 = JTBToolkit.makeNodeToken(n1);
    n2 = ClassName();
    n4 = jj_consume_token(25);
            n3 = JTBToolkit.makeNodeToken(n4);
    n5 = MethodName();
    n7 = jj_consume_token(COMMA);
            n6 = JTBToolkit.makeNodeToken(n7);
    n8 = TypeTag();
    n10 = jj_consume_token(COMMA);
             n9 = JTBToolkit.makeNodeToken(n10);
    n11 = ArgNumber();
    n13 = jj_consume_token(COMMA);
             n12 = JTBToolkit.makeNodeToken(n13);
    n14 = FieldList();
    n16 = jj_consume_token(27);
              n15 = JTBToolkit.makeNodeToken(n16);
    n17 = DependencyValue();
    n19 = jj_consume_token(COMMA);
             n18 = JTBToolkit.makeNodeToken(n19);
    n20 = ResolvedValue();
    n22 = jj_consume_token(28);
              n21 = JTBToolkit.makeNodeToken(n22);
     {if (true) return new ArgumentType(n0,n2,n3,n5,n6,n8,n9,n11,n12,n14,n15,n17,n18,n20,n21);}
    throw new Error("Missing return statement in function");
  }

  static final public FieldType FieldType() throws ParseException {
   NodeToken n0;
   Token n1;
   ClassName n2;
   NodeToken n3;
   Token n4;
   MethodName n5;
   NodeToken n6;
   Token n7;
   TypeTag n8;
   NodeToken n9;
   Token n10;
   ArgNumber n11;
   NodeToken n12;
   Token n13;
   FieldList n14;
   NodeToken n15;
   Token n16;
   DependencyValue n17;
   NodeToken n18;
   Token n19;
   ResolvedValue n20;
   NodeToken n21;
   Token n22;
    n1 = jj_consume_token(26);
             n0 = JTBToolkit.makeNodeToken(n1);
    n2 = ClassName();
    n4 = jj_consume_token(25);
            n3 = JTBToolkit.makeNodeToken(n4);
    n5 = MethodName();
    n7 = jj_consume_token(COMMA);
            n6 = JTBToolkit.makeNodeToken(n7);
    n8 = TypeTag();
    n10 = jj_consume_token(COMMA);
             n9 = JTBToolkit.makeNodeToken(n10);
    n11 = ArgNumber();
    n13 = jj_consume_token(COMMA);
             n12 = JTBToolkit.makeNodeToken(n13);
    n14 = FieldList();
    n16 = jj_consume_token(27);
              n15 = JTBToolkit.makeNodeToken(n16);
    n17 = DependencyValue();
    n19 = jj_consume_token(COMMA);
             n18 = JTBToolkit.makeNodeToken(n19);
    n20 = ResolvedValue();
    n22 = jj_consume_token(28);
              n21 = JTBToolkit.makeNodeToken(n22);
     {if (true) return new FieldType(n0,n2,n3,n5,n6,n8,n9,n11,n12,n14,n15,n17,n18,n20,n21);}
    throw new Error("Missing return statement in function");
  }

  static final public ClassName ClassName() throws ParseException {
   Identifier n0;
   NodeListOptional n1 = new NodeListOptional();
   ClassNameRest n2;
    n0 = Identifier();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 29:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_3;
      }
      n2 = ClassNameRest();
        n1.addNode(n2);
    }
     n1.nodes.trimToSize();
     {if (true) return new ClassName(n0,n1);}
    throw new Error("Missing return statement in function");
  }

  static final public ClassNameRest ClassNameRest() throws ParseException {
   NodeToken n0;
   Token n1;
   Identifier n2;
    n1 = jj_consume_token(29);
            n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Identifier();
     {if (true) return new ClassNameRest(n0,n2);}
    throw new Error("Missing return statement in function");
  }

  static final public MethodName MethodName() throws ParseException {
   Identifier n0;
    n0 = Identifier();
     {if (true) return new MethodName(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public TypeTag TypeTag() throws ParseException {
   NodeChoice n0;
   NodeToken n1;
   Token n2;
   NodeToken n3;
   Token n4;
   NodeToken n5;
   Token n6;
   NodeToken n7;
   Token n8;
   NodeToken n9;
   Token n10;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LOCAL:
      n2 = jj_consume_token(LOCAL);
                    n1 = JTBToolkit.makeNodeToken(n2);
        n0 = new NodeChoice(n1, 0);
      break;
    case ARGUMENT:
      n4 = jj_consume_token(ARGUMENT);
                    n3 = JTBToolkit.makeNodeToken(n4);
        n0 = new NodeChoice(n3, 1);
      break;
    case PARAMETER:
      n6 = jj_consume_token(PARAMETER);
                    n5 = JTBToolkit.makeNodeToken(n6);
        n0 = new NodeChoice(n5, 2);
      break;
    case RETURN:
      n8 = jj_consume_token(RETURN);
                   n7 = JTBToolkit.makeNodeToken(n8);
        n0 = new NodeChoice(n7, 3);
      break;
    case FIELD:
      n10 = jj_consume_token(FIELD);
                     n9 = JTBToolkit.makeNodeToken(n10);
        n0 = new NodeChoice(n9, 4);
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return new TypeTag(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public ArgNumber ArgNumber() throws ParseException {
   NodeToken n0;
   Token n1;
    n1 = jj_consume_token(INTEGER_LITERAL);
                          n0 = JTBToolkit.makeNodeToken(n1);
     {if (true) return new ArgNumber(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public ParmNumber ParmNumber() throws ParseException {
   NodeToken n0;
   Token n1;
    n1 = jj_consume_token(INTEGER_LITERAL);
                          n0 = JTBToolkit.makeNodeToken(n1);
     {if (true) return new ParmNumber(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public FieldList FieldList() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeListOptional n2 = new NodeListOptional();
   Identifier n3;
   NodeToken n4;
   Token n5;
    n1 = jj_consume_token(LBRACKET);
            n0 = JTBToolkit.makeNodeToken(n1);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_4;
      }
      n3 = Identifier();
        n2.addNode(n3);
    }
     n2.nodes.trimToSize();
    n5 = jj_consume_token(RBRACKET);
            n4 = JTBToolkit.makeNodeToken(n5);
     {if (true) return new FieldList(n0,n2,n4);}
    throw new Error("Missing return statement in function");
  }

  static final public Identifier Identifier() throws ParseException {
   NodeToken n0;
   Token n1;
    n1 = jj_consume_token(IDENTIFIER);
                     n0 = JTBToolkit.makeNodeToken(n1);
     {if (true) return new Identifier(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public DependencyValue DependencyValue() throws ParseException {
   NodeChoice n0;
   NodeToken n1;
   Token n2;
   NodeToken n3;
   Token n4;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DONOTESCAPE:
      n2 = jj_consume_token(DONOTESCAPE);
               n1 = JTBToolkit.makeNodeToken(n2);
        n0 = new NodeChoice(n1, 0);
      break;
    case ESCAPE:
      n4 = jj_consume_token(ESCAPE);
               n3 = JTBToolkit.makeNodeToken(n4);
        n0 = new NodeChoice(n3, 1);
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return new DependencyValue(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public ResolvedValue ResolvedValue() throws ParseException {
   NodeChoice n0;
   NodeToken n1;
   Token n2;
   NodeToken n3;
   Token n4;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DONOTESCAPE:
      n2 = jj_consume_token(DONOTESCAPE);
               n1 = JTBToolkit.makeNodeToken(n2);
        n0 = new NodeChoice(n1, 0);
      break;
    case ESCAPE:
      n4 = jj_consume_token(ESCAPE);
               n3 = JTBToolkit.makeNodeToken(n4);
        n0 = new NodeChoice(n3, 1);
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return new ResolvedValue(n0);}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_3_4() {
    if (jj_3R_8()) return true;
    return false;
  }

  static private boolean jj_3R_22() {
    if (jj_scan_token(FIELD)) return true;
    return false;
  }

  static private boolean jj_3R_21() {
    if (jj_scan_token(RETURN)) return true;
    return false;
  }

  static private boolean jj_3_3() {
    if (jj_3R_7()) return true;
    return false;
  }

  static private boolean jj_3R_23() {
    if (jj_scan_token(29)) return true;
    if (jj_3R_16()) return true;
    return false;
  }

  static private boolean jj_3R_9() {
    if (jj_scan_token(26)) return true;
    if (jj_3R_10()) return true;
    if (jj_scan_token(25)) return true;
    if (jj_3R_11()) return true;
    if (jj_scan_token(COMMA)) return true;
    if (jj_3R_12()) return true;
    if (jj_scan_token(COMMA)) return true;
    if (jj_3R_15()) return true;
    if (jj_scan_token(COMMA)) return true;
    if (jj_3R_14()) return true;
    return false;
  }

  static private boolean jj_3R_14() {
    if (jj_scan_token(LBRACKET)) return true;
    return false;
  }

  static private boolean jj_3R_8() {
    if (jj_scan_token(26)) return true;
    if (jj_3R_10()) return true;
    if (jj_scan_token(25)) return true;
    if (jj_3R_11()) return true;
    if (jj_scan_token(COMMA)) return true;
    if (jj_3R_12()) return true;
    if (jj_scan_token(COMMA)) return true;
    if (jj_3R_15()) return true;
    if (jj_scan_token(COMMA)) return true;
    if (jj_3R_14()) return true;
    return false;
  }

  static private boolean jj_3R_20() {
    if (jj_scan_token(PARAMETER)) return true;
    return false;
  }

  static private boolean jj_3R_7() {
    if (jj_scan_token(26)) return true;
    if (jj_3R_10()) return true;
    if (jj_scan_token(25)) return true;
    if (jj_3R_11()) return true;
    if (jj_scan_token(COMMA)) return true;
    if (jj_3R_12()) return true;
    if (jj_scan_token(COMMA)) return true;
    if (jj_3R_13()) return true;
    if (jj_scan_token(COMMA)) return true;
    if (jj_3R_14()) return true;
    return false;
  }

  static private boolean jj_3_2() {
    if (jj_3R_6()) return true;
    return false;
  }

  static private boolean jj_3R_6() {
    if (jj_scan_token(26)) return true;
    if (jj_3R_10()) return true;
    if (jj_scan_token(25)) return true;
    if (jj_3R_11()) return true;
    if (jj_scan_token(COMMA)) return true;
    if (jj_3R_12()) return true;
    if (jj_scan_token(COMMA)) return true;
    if (jj_3R_13()) return true;
    if (jj_scan_token(COMMA)) return true;
    if (jj_3R_14()) return true;
    return false;
  }

  static private boolean jj_3R_5() {
    if (jj_scan_token(26)) return true;
    if (jj_3R_10()) return true;
    if (jj_scan_token(25)) return true;
    if (jj_3R_11()) return true;
    if (jj_scan_token(COMMA)) return true;
    if (jj_3R_12()) return true;
    if (jj_scan_token(COMMA)) return true;
    if (jj_3R_13()) return true;
    if (jj_scan_token(COMMA)) return true;
    if (jj_3R_14()) return true;
    return false;
  }

  static private boolean jj_3R_19() {
    if (jj_scan_token(ARGUMENT)) return true;
    return false;
  }

  static private boolean jj_3_1() {
    if (jj_3R_5()) return true;
    return false;
  }

  static private boolean jj_3R_18() {
    if (jj_scan_token(LOCAL)) return true;
    return false;
  }

  static private boolean jj_3R_12() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_18()) {
    jj_scanpos = xsp;
    if (jj_3R_19()) {
    jj_scanpos = xsp;
    if (jj_3R_20()) {
    jj_scanpos = xsp;
    if (jj_3R_21()) {
    jj_scanpos = xsp;
    if (jj_3R_22()) return true;
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_17() {
    if (jj_3R_23()) return true;
    return false;
  }

  static private boolean jj_3R_13() {
    if (jj_scan_token(INTEGER_LITERAL)) return true;
    return false;
  }

  static private boolean jj_3R_10() {
    if (jj_3R_16()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_17()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3R_16() {
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }

  static private boolean jj_3R_15() {
    if (jj_scan_token(INTEGER_LITERAL)) return true;
    return false;
  }

  static private boolean jj_3R_11() {
    if (jj_3R_16()) return true;
    return false;
  }

  static private boolean jj_3_5() {
    if (jj_3R_9()) return true;
    return false;
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public PrePassTokenManager token_source;
  static JavaCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private Token jj_scanpos, jj_lastpos;
  static private int jj_la;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[7];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x40,0x4000000,0x20000000,0x1f0000,0x200000,0xc000,0xc000,};
   }
  static final private JJCalls[] jj_2_rtns = new JJCalls[5];
  static private boolean jj_rescan = false;
  static private int jj_gc = 0;

  /** Constructor with InputStream. */
  public PrePass(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public PrePass(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new JavaCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new PrePassTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 7; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 7; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public PrePass(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new JavaCharStream(stream, 1, 1);
    token_source = new PrePassTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 7; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 7; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor with generated Token Manager. */
  public PrePass(PrePassTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 7; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(PrePassTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 7; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      if (++jj_gc > 100) {
        jj_gc = 0;
        for (int i = 0; i < jj_2_rtns.length; i++) {
          JJCalls c = jj_2_rtns[i];
          while (c != null) {
            if (c.gen < jj_gen) c.first = null;
            c = c.next;
          }
        }
      }
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }
